El Gran Refactoring 2