@@ -1,7 +1,6 @@
 package core.commands;
 
 import core.otherlisteners.Reactionary;
-import core.parsers.NoOpParser;
 import dao.ChuuService;
 import dao.entities.ArtistPlays;
 import dao.entities.ResultWrapper;
@@ -9,21 +8,18 @@ import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.MessageBuilder;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class ArtistFrequencyCommand extends ResultWrappedCommand<ArtistPlays> {
+public class TotalArtistPlayCountCommand extends ResultWrappedCommand<ArtistPlays> {
 
-    public ArtistFrequencyCommand(ChuuService dao) {
+    public TotalArtistPlayCountCommand(ChuuService dao) {
         super(dao);
-        this.parser = new NoOpParser();
-        this.respondInPrivate = false;
     }
 
     @Override
     public ResultWrapper<ArtistPlays> getList(String[] message, MessageReceivedEvent e) {
-        return getService().getArtistFrequencies(e.getGuild().getIdLong());
+        return getService().getArtistPlayCount(e.getGuild().getIdLong());
     }
 
     @Override
@@ -31,43 +27,37 @@ public class ArtistFrequencyCommand extends ResultWrappedCommand<ArtistPlays> {
         List<ArtistPlays> list = wrapper.getResultList();
         if (list.size() == 0) {
             sendMessageQueue(e, "No one has played any artist yet!");
+            return;
         }
 
         StringBuilder a = new StringBuilder();
         List<String> collect = list.stream().map(x -> ". [" +
-                x.getArtistName() +
-                "](" + CommandUtil.getLastFmArtistUrl(x.getArtistName()) +
-                ") - " + x.getCount() +
-                " listeners \n").collect(Collectors.toList());
-        for (int i = 0, size = collect.size(); i < 10 && i < size; i++) {
-            String text = collect.get(i);
-            a.append(i + 1).append(text);
-        }
-
-
-        EmbedBuilder embedBuilder = new EmbedBuilder();
-        embedBuilder.setDescription(a);
-        embedBuilder.setColor(CommandUtil.randomColor());
-        embedBuilder.setTitle("Artist's frequencies");
-        embedBuilder.setFooter(e.getGuild().getName() + " has " + wrapper.getRows() + " different artists!\n", null);
-        embedBuilder.setThumbnail(e.getGuild().getIconUrl());
+                                                      x.getArtistName() +
+                                                      "](" + CommandUtil.getLastFmArtistUrl(x.getArtistName()) +
+                                                      ") - " + x.getCount() +
+                                                      " plays \n").collect(Collectors.toList());
+        EmbedBuilder embedBuilder = initList(a, collect)
+                .setTitle("Total artist plays")
+                .setFooter(e.getGuild().getName() + " has " + wrapper.getRows() + " total plays!\n", null)
+                .setThumbnail(e.getGuild().getIconUrl());
         MessageBuilder mes = new MessageBuilder();
         e.getChannel().sendMessage(mes.setEmbed(embedBuilder.build()).build()).queue(message1 ->
                 executor.execute(() -> new Reactionary<>(collect, message1, embedBuilder)));
     }
 
+
     @Override
     public String getDescription() {
-        return "Artist ordered by listener";
+        return "Total Plays";
     }
 
     @Override
     public List<String> getAliases() {
-        return Arrays.asList("listeners", "frequencies", "hz");
+        return List.of("totalplays", "tp");
     }
 
     @Override
     public String getName() {
-        return "Artist Listeners";
+        return "Total Plays";
     }
 }
